--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
     "custom-framework"
   ],
   "author": "jkoster",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-cssmin": "^4.0.0",
+    "grunt-contrib-sass": "^2.0.0",
+    "grunt-contrib-uglify": "^5.2.1",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-uncss": "^0.10.1"
+  }
 }
