--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   "author": "jkoster",
   "license": "ISC",
   "devDependencies": {
+    "grunt": "^1.5.2",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-concat": "^2.1.0",
     "grunt-contrib-cssmin": "^4.0.0",
+    "grunt-contrib-imagemin": "^4.0.0",
     "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-uglify": "^5.2.1",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-uncss": "^0.10.1"
+    "grunt-terser": "^2.0.0",
+    "grunt-uncss": "^0.10.1",
+    "sass": "^1.51.0"
   }
 }
