--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "grunt": "^1.5.2",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^4.0.0",
     "grunt-contrib-imagemin": "^4.0.0",
     "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-uglify": "^5.2.1",
+    "grunt-contrib-uglify-es": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-terser": "^2.0.0",
     "grunt-uncss": "^0.10.1",
