--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "grunt-terser": "^2.0.0",
     "grunt-uncss": "^0.10.1",
     "sass": "^1.51.0"
+  },
+  "dependencies": {
+    "workbox-sw": "^6.5.3"
   }
 }
