--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "author": "jkoster",
   "license": "ISC",
   "devDependencies": {
-    "grunt": "^1.5.2",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-concat": "^2.1.0",
     "grunt-contrib-copy": "^1.0.0",
@@ -29,6 +28,15 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-terser": "^2.0.0",
     "grunt-uncss": "^0.10.1",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-strip-comments": "^2.5.2",
+    "gulp-uglify": "^3.0.2",
     "sass": "^1.51.0"
   },
   "dependencies": {
