--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "jkoster",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^5.1.3",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-concat": "^2.1.0",
     "grunt-contrib-copy": "^1.0.0",
